# ai-agent-extension

./: .gitignore  README.md  pyproject.toml
src/: config.py  config.yaml
src/agent/: core.py  executor.py
src/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/: test_agent.py  test_providers.py
